docs: 更新.gitignore并移除quick-start.md中的命令列表
更新.gitignore文件以正确忽略docs/.vitepress下的生成文件
移除quick-start.md中过时的命令列表，保持文档简洁

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-.docs/.vitepress/cache
-.docs/.vitepress/dist
+docs/.vitepress/cache
+docs/.vitepress/dist
+docs/.vitepress/dist/404.html
+docs/.vitepress/dist/commands.html
+docs/.vitepress/dist/guide.html
+docs/.vitepress/dist/hashmap.json
+docs/.vitepress/dist/index.html
+docs/.vitepress/dist/quick-start.html
+docs/.vitepress/dist/vp-icons.css
+docs/.vitepress/dist/assets/app.BVGvuRiM.js
+docs/.vitepress/dist/assets/commands.md.rizcPmj-.js
+docs/.vitepress/dist/assets/commands.md.rizcPmj-.lean.js
+docs/.vitepress/dist/assets/guide.md.DS670IB_.js
+docs/.vitepress/dist/assets/guide.md.DS670IB_.lean.js
+docs/.vitepress/dist/assets/index.md.2PUdiUCe.js
+docs/.vitepress/dist/assets/index.md.2PUdiUCe.lean.js
+docs/.vitepress/dist/assets/inter-italic-cyrillic-ext.r48I6akx.woff2
+docs/.vitepress/dist/assets/inter-italic-cyrillic.By2_1cv3.woff2
+docs/.vitepress/dist/assets/inter-italic-greek-ext.1u6EdAuj.woff2
+docs/.vitepress/dist/assets/inter-italic-greek.DJ8dCoTZ.woff2
+docs/.vitepress/dist/assets/inter-italic-latin-ext.CN1xVJS-.woff2
+docs/.vitepress/dist/assets/inter-italic-latin.C2AdPX0b.woff2
+docs/.vitepress/dist/assets/inter-italic-vietnamese.BSbpV94h.woff2
+docs/.vitepress/dist/assets/inter-roman-cyrillic-ext.BBPuwvHQ.woff2
+docs/.vitepress/dist/assets/inter-roman-cyrillic.C5lxZ8CY.woff2
+docs/.vitepress/dist/assets/inter-roman-greek-ext.CqjqNYQ-.woff2
+docs/.vitepress/dist/assets/inter-roman-greek.BBVDIX6e.woff2
+docs/.vitepress/dist/assets/inter-roman-latin-ext.4ZJIpNVo.woff2
+docs/.vitepress/dist/assets/inter-roman-latin.Di8DUHzh.woff2
+docs/.vitepress/dist/assets/inter-roman-vietnamese.BjW4sHH5.woff2
+docs/.vitepress/dist/assets/quick-start.md.IKbgngKb.js
+docs/.vitepress/dist/assets/quick-start.md.IKbgngKb.lean.js
+docs/.vitepress/dist/assets/style.DaXEKsD5.css
+docs/.vitepress/dist/assets/chunks/@localSearchIndexroot.CiPqPaLF.js
+docs/.vitepress/dist/assets/chunks/framework.DRADY2L-.js
+docs/.vitepress/dist/assets/chunks/theme.B1OUIf3V.js
+docs/.vitepress/dist/assets/chunks/VPLocalSearchBox.BdpJ5Rkz.js
