docs: 更新文档格式和内容
- 优化命令文档的markdown格式
- 更新快速开始文档的标题和结构
- 添加异步/同步API写法示例到指南文档
- 新增完整的更新日志文档
- 调整.gitignore文件

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ docs/.vitepress/dist/assets/chunks/@localSearchIndexroot.CiPqPaLF.js
 docs/.vitepress/dist/assets/chunks/framework.DRADY2L-.js
 docs/.vitepress/dist/assets/chunks/theme.B1OUIf3V.js
 docs/.vitepress/dist/assets/chunks/VPLocalSearchBox.BdpJ5Rkz.js
+.gitignore
+.gitignore
