--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nolebase/vitepress-plugin-enhanced-readabilities": "^2.18.2",
+    "@nolebase/vitepress-plugin-highlight-targeted-heading": "^2.18.2",
     "canvas-confetti": "^1.9.3",
     "vitepress": "^1.6.4"
   },
   "dependencies": {
     "@miletorix/vitepress-back-to-top-button": "^1.0.1",
+    "@nolebase/vitepress-plugin-git-changelog": "^2.18.2",
     "markdown-it-mathjax3": "^4.3.2",
     "medium-zoom": "^1.1.0",
     "nprogress-v2": "^1.1.10",
