feat(docs): 添加docker部署指南文档和相关图片资源
添加docker部署指南文档，包含详细的部署步骤和配置说明
新增多个docker相关图片资源用于文档展示
更新package.json添加vitepress插件依赖
修改导航配置将docker部署指南链接改为本地文档

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@nolebase/vitepress-plugin-enhanced-readabilities": "^2.18.2",
     "@nolebase/vitepress-plugin-highlight-targeted-heading": "^2.18.2",
+    "@nolebase/vitepress-plugin-page-properties": "^2.18.2",
     "canvas-confetti": "^1.9.3",
     "vitepress": "^1.6.4"
   },
